# sloomo

./: .env.example  .gitignore  CLAUDE.md  README.md  package.json  pitch-marp.md
.claude/commands /: gemini-search.md
android/: .gitkeep  README.md
app/: App.minimal.tsx  App.tsx  app.json  eas.json  package.json
app/src/: polyfills.ts
contract/: Anchor.toml  package.json
contract/programs/contract/: Cargo.toml
contract/programs/contract/src/: error.rs  lib.rs
contract/programs/contract/src/instructions/: add_or_update_allocation.rs  deposit_usdc.rs  initialize_portfolio.rs  invest_in_equity.rs  mod.rs  real_jupiter_rebalance.rs  rebalance_portfolio.rs  sol_jupiter_rebalance.rs  update_yields.rs  withdraw_from_equity.rs
contract/programs/contract/src/state/: mod.rs  portfolio.rs  types.rs
contract/programs/contract/src/utils/: jupiter.rs  mod.rs  token_transfers.rs  validations.rs
contract/scripts/: add_allocation.ts  (+10 more)
credit-pay/: app.json  package-lock.json  package.json
database/: schema.sql
docs/: README.md  anchor-rust-best-practices.md  client-contract-integration.md  comprehensive-implementation-guide.md  contract.md  credit-system.md  emulator-setup-ja.md  emulator-setup.md  exec-flow.md  fix.md  hackathon.md  installation-guide.md  jupiter-api-rust.md  product-overview.md  product-specification.md  product-ui.md  product.md  quick-start-guide.md  setup-guide.md  tech-reference.md  tech-stack.md  test-execution-summary.md  testing-complete-guide.md  testing-guide.md
mint-scripts/: deploy-yield-bearing-stablecoin.ts  package.json
(+71 files in other folders)
