[package]
name = "sloomo_portfolio"
version = "0.1.0"
description = "Sloomo Portfolio Management - xStock equity token portfolio with auto-rebalancing"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "sloomo_portfolio"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = { version = "0.31.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.31.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

